ingress/service-devco.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demodevco
  labels:
    app:  demodevco
    tier: backend
spec:
  replicas: 1
  template:
    metadata:
      labels: 
        app:  demodevco
        tier: backend
    spec:
      containers:
      - name: romanotonumber
        image: cajecasu/demodevco
        ports:
        - name: http-server
          containerPort:  3001
---
apiVersion: v1
kind: Service
metadata:
  name: demodevco-service
  labels:
    app:  devco-service
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http-server
  selector:
    app:  demodevco
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devco-ingress
  annotations:  
    nginx.ingress.kubernetes.io/infinity: cookie
spec:
  rules:
  - host: demodevco.test
    http:
      paths:
      - path: "/"
        backend:
          serviceName: demodevco-service
          servicePort: 80
